added style to detail page

--- a/mysite/polls/templates/polls/detail.html
+++ b/mysite/polls/templates/polls/detail.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<style>
+			body {
+					font-family: 'Comic Sans MS';
+					background-color: #189999;
+					color: white;
+				  }
+				  
+				  img{
+						width: 300px;
+					  }
+			
+		</style>
 	</head>
 <body>
 <h1>{{ question.question_text }}</h1>
